[package]
name = "gesture_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc="0.2"
input="0.8"
nix={ version = "0.26", features = ["poll"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
timer = "0.2"
chrono = "0.4"
envy = "0.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-appender = "0.2"